Little fix for details overflow

--- a/src/components/SupplyPlace/PlaceItem.css
+++ b/src/components/SupplyPlace/PlaceItem.css
@@ -5,7 +5,7 @@
 .place-item__content {
   padding: 0;
   display: inline-block;
-  margin: 0 -4rem 0rem -4rem;
+  /* margin: 0 -4rem 0rem -4rem; */
 }
 
 .place-item__info {
